2013-12-03 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_x86-x87.c: Correct wrong optimization when
	loading the log(2) constant.

2013-12-03 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_x86-cpu.c: Use the emms instruction before
	calling any function. This is particularly important
	when using c99 complex functions as it can easily
	overflow the x87 stack due to the way lightning uses
	the x87 stack as a flat register file.

2013-12-02 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_x86-x87.c: Correct wrong code generation due
	to comparing the base and not the value register with
	%st(0) in stxi_f.

2013-12-02 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_x86-x87.c, lib/jit_x86.c: Use 8 bytes aligned
	stack offset for float/double x87 to/from sse move.

2013-11-27 Paulo Andrade <pcpa@gnu.org>

	* configure.ac, lib/jit_arm-swf.c, lib/jit_arm.c: Add
	changes that should at least allow building lightning
	on Apple iOS7.

2013-10-08 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_ppc-cpu.c: Correct wrong shortcut for ldxi_l with
	a zero offset, that was calling ldr_i instead of ldr_l.

2013-10-08 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_arm.h, lib/jit_arm-cpu.c: Do not use
	by default load/store instructions that map to ldrt/strt.
	There is already the long displacement version for positive
	offsets, and when using a (shorter) negative offset it does
	not map to ldrt/strt. At least on qemu strt may cause
	reproducible, but unexpected SIGILL.

2013-10-08 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_arm-vfp.c: Correct wrong load/store offset
	calculation when the displacement is constant but too
	large to use an instruction with an immediate offset.

2013-10-07 Paulo Andrade <pcpa@gnu.org>

	* check/self.c: Extend tests to validate jit_callee_save_p
	does not cause an assertion on valid arguments, and test
	extra registers defined on some backends.

	* configure.ac: Do not ignore environment CFLAGS when
	checking if need to test runtime configurable options,